Fix text content link contrast issues

--- a/web/themes/pubsub/sass/components/text-content.scss
+++ b/web/themes/pubsub/sass/components/text-content.scss
@@ -10,14 +10,14 @@
   line-height: var(--sp1-5);
 
   & a:where(:not(.button)) {
-    color: var(--color--sun-45);
+    color: var(--color--sun-40);
     text-decoration-thickness: 4px;
     text-decoration-color: var(--color--sun-80);
     overflow-wrap: break-word;
     transition: color 0.2s;
 
     &:hover {
-      color: var(--color--sun-55);
+      color: var(--color--sun-45);
     }
   }
 
@@ -31,7 +31,7 @@
     margin-bottom: var(--sp0-5);
 
     &::marker {
-      color: var(--color--sun-55);
+      color: var(--color--sun-40);
     }
   }
 
